# solana-wallet-sollaw

./: '  Cargo.toml  Makefile  README.md  README.zh-CN.md
libs/cutil/: Cargo.toml
libs/cutil/src/: http.rs
libs/sqldb/: Cargo.toml
libs/sqldb/src/: entry.rs
libs/wallet/: Cargo.toml
libs/wallet/src/: address.rs  helius.rs  lib.rs  mnemonic.rs  network.rs  pyth.rs  seed.rs  transaction.rs  transation.rs  util.rs
main/: Cargo.toml
main/src/: desktop.rs  lib.rs
main/src/config/: conf.rs  data.rs  mod.rs
main/src/db/: mod.rs
main/src/logic/: clipboard.rs  mod.rs  setting.rs
main/src/util/: translator.rs
main/ui/: appwindow.slint  logic.slint  store.slint  theme.slint  util.slint
main/ui/base/: line-input.slint  login.slint  mnemonic.slint  sign-in.slint  widgets.slint
main/ui/panel/bodyer/: favorite.slint  find.slint  panel.slint  rss.slint  setting.slint
main/ui/setup/: panel.slint  recover-account.slint  set-passwrod.slint
script/: fetch-spl-token-metadata-bash.json  fetch-spl-token-metadata-bash.sh  fetch-spl-token-metadata.json  fetch-spl-token-metadata.sh  insert-usdt-into-db.py
src/: desktop.rs  lib.rs  version.rs
src/config/: conf.rs  data.rs  mod.rs
src/db/: accounts.rs  address_book.rs  def.rs  mod.rs
src/logic/: about.rs  accounts.rs  address_book.rs  clipboard.rs  history.rs  message.rs  mod.rs  ok_cancel_dialog.rs  setting.rs  tokens.rs  tr.rs  util.rs
src/util/: crypto.rs  http.rs  str.rs  translator.rs
ui/: appwindow.slint  logic.slint  store.slint  theme.slint  util.slint
ui/base/: about.slint  account-balance.slint  address-book.slint  banner.slint  def.slint  elevated-btn.slint  icons-dialog.slint  line-input.slint  list-tile.slint  login.slint  mnemonic.slint  ok-cancel.slint  password.slint  reset-password.slint  setting-detail.slint  sign-in.slint  token-list.slint  token-sender.slint  token-tile.slint  transaction-fee.slint  transaction-tile.slint  wait-transaction-confirmed.slint  widgets.slint
ui/panel/: footer.slint  panel.slint
ui/panel/bodyer/: address-book.slint  history.slint  home.slint  panel.slint  recipient.slint  setting.slint  test-mode-banner.slint
ui/setup/: create-account.slint  panel.slint  recover-account.slint  set-passwrod.slint  setup-type.slint
wallet/: Cargo.toml
wallet/src/: address.rs  transation.rs  util.rs
win/: version.h
