[package]
name = "sollet"
version = "0.1.0"
edition = "2021"
authors = ["Heng30 <rongheng30@gmail.com>"]
homepage = "https://github.com/Heng30/solana-wallet-sollet"
readme = "README.md"
keywords = ["rust", "solana", "wallet", "bip39", "crypto", "blockchain"]
license = "MIT"
repository = "https://github.com/Heng30/solana-wallet-sollet"

[dependencies]
log = "0.4"
md5 = "0.7"
toml = "0.8"
rand = "0.8"
chrono = "0.4"
anyhow = "1.0"
clipboard = "0.5"
webbrowser = "0.8"
serde_json = "1.0"
lazy_static = "1.4"

uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1.35", features = ["full"] }
wallet = { version = "0.1.0", path = "./libs/wallet" }
serde = { version = "1.0", features = ["serde_derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
slint = "1.6"
env_logger = "0.10"
platform-dirs = "0.3"
reqwest = { version = "0.11", features = ["json", "socks"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
slint = { version = "1.6", features = ["backend-android-activity-06"] }
reqwest = { version = "0.11", features = [
  "native-tls-vendored",
  "json",
  "socks",
] }

[build-dependencies]
cmd_lib = "1.9"
slint-build = "1.6"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"

[features]
default = []
desktop = []

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/desktop.rs"
name = "sollet-desktop"
required-features = ["desktop"]

[package.metadata.android]
package = "xyz.heng30.sollet"
build_targets = ["aarch64-linux-android"]
resources = "./res"
strip = "strip"

[package.metadata.android.signing.dev]
path = "./keystore/debug.keystore"
keystore_password = "123456"

[package.metadata.android.signing.release]
path = "./keystore/release.keystore"
keystore_password = "123456"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 32

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
theme = "@style/AppTheme"

[package.metadata.android.application.activity]
orientation = "portrait"
launch_mode = "singleTop"
always_retain_task_state = true
