[package]
name = "sollet"
version = "0.1.0"
edition = "2021"
authors = ["Heng30 <rongheng30@gmail.com>"]
homepage = "https://github.com/Heng30/solana-wallet-sollet"
readme = "README.md"
keywords = ["rust", "solana", "wallet", "bip39", "crypto", "blockchain"]
license = "MIT"
repository = "https://github.com/Heng30/solana-wallet-sollet"

[dependencies]
slint = "1.6"
log = "=0.4.22"
toml = "=0.8.14"
image = "=0.24.7"
qrcode = "=0.13.0"
anyhow = "=1.0.86"
clipboard = "=0.5.0"
once_cell = "=1.19.0"
webbrowser = "=1.0.1"
derivative = "=2.2.0"
serde_with = "=3.8.3"
serde_json = "=1.0.118"

uuid = { version = "=1.9.1", features = ["v4"] }
tokio = { version = "=1.38.0", features = ["full"] }
serde = { version = "=1.0.203", features = ["serde_derive"] }

sqldb = { version = "0.1.0", path = "./libs/sqldb" }
wallet = { version = "0.1.0", path = "./libs/wallet" }
cutil = { version = "0.1.0", path = "./libs/cutil", features = ["default", "crypto", "time"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "=0.10.2"
platform-dirs = "=0.3.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "=0.13.0"

[build-dependencies]
cmd_lib = "=1.9.4"
slint-build = "1.6"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "=2.4.2"

[features]
default = ["slint/backend-android-activity-06"]
desktop = []

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/desktop.rs"
name = "sollet-desktop"
required-features = ["desktop"]

[package.metadata.android]
package = "xyz.heng30.sollet"
build_targets = ["aarch64-linux-android"]
resources = "./res"
strip = "strip"

[package.metadata.android.signing.dev]
path = "./keystore/debug.keystore"
keystore_password = "123456"

[package.metadata.android.signing.release]
path = "./keystore/release.keystore"
keystore_password = "123456"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 32

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
theme = "@style/AppTheme"

[package.metadata.android.application.activity]
orientation = "portrait"
launch_mode = "singleTop"
always_retain_task_state = true
