[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bip32 = "=0.3.0"
chrono = "=0.4.38"
anyhow = "=1.0.86"
tiny-bip39 = "=0.8.2"
spl-token = "=6.0.0"
solana-sdk = "=2.0.1"
solana-client = "=2.0.1"
solana-zk-token-sdk = "=2.0.1"
solana-account-decoder = "=2.0.1"
solana-transaction-status = "=2.0.1"


# curve25519-dalek = "4.1.3"
# ed25519-dalek = "1.0.1"
# the original ed25519-dalek from the crates-io limit the `zeroize` version <=1.0 and <1.4.
# However, the sqlx required `zeroize` version >= 1.5.
# So we should update the dependences crate version manually
# [patch.crates-io]
# ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "main", version = "2.1.1", optional = true}
