[package]
name = "cutil"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1"
rand = "^0.8"
hex = "^0.4"
chrono = "^0.4"
aes = { version = "^0.7", optional = true }
block-modes = { version = "^0.8", optional = true }
crypto-hash = { version = "^0.3", optional = true }
reqwest = { version = "^0.11", features = ["json", "socks"], optional = true }

[features]
default = []
time = []
http = ["dep:reqwest"]
crypto = ["dep:aes", "dep:block-modes", "dep:crypto-hash"]
