[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bip32 = "=0.3.0"
chrono = "=0.4.38"
anyhow = "=1.0.86"
futures = "=0.3.30"
spl-token = "=6.0.0"
tiny-bip39 = "=0.8.2"
solana-sdk = "=2.0.1"
solana-client = "=2.0.1"
solana-zk-token-sdk = "=2.0.1"
solana-account-decoder = "=2.0.1"
solana-transaction-status = "=2.0.1"
pyth-sdk-solana = { version = "=0.10.1", optional = true }

[dev-dependencies]
rand = "^0.8"
tokio = { version = "^1", features = ["full"] }

[features]
default = []
pyth = ["dep:pyth-sdk-solana"]
