[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
bip32 = "0.3"
chrono = "0.4"
anyhow = "1.0"
futures = "0.3"
tiny-bip39 = "0.8"
solana-sdk = "2.0"
solana-client = "2.0"
solana-zk-token-sdk = "2.0"
solana-account-decoder = "2.0"
solana-transaction-status = "2.0"

spl-memo = "5.0"
spl-token = "6.0"
spl-associated-token-account = "4.0"

reqwest = { version = "0.11", features = ["json"], optional = true }
pyth-sdk-solana = { version = "0.10", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["serde_derive"], optional = true }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
pyth = ["dep:pyth-sdk-solana"]
helius = ["dep:reqwest", "dep:serde_json", "dep:serde"]
